# ficcd-activity-3

./: README.md  main.ipynb  pyproject.toml
