[project]
name = "ficcd-activity-3"
version = "0.1.0"
description = "Atividade 3 de Fundamentos de Inteligência Computacional e Ciência de Dados (FICCD)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
